--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.11",
+  "version": "1.0.13",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/nnthanh01061999/react-modal-handle.git"
   },
-  "keyword": [
+  "keywords": [
     "react",
     "modal",
     "handle-modal",
